# MTCNN-light-face-detection

./: CMakeLists.txt  LICENSE  README.md  temp
detections/AFW/: mtcnn_afw_dets.txt
detections/FDDB/: mtcnn_fddb_dets.txt
detections/PASCAL/: mtcnn_pascal_dets.txt
detections/WIDER/mtcnn_val/0--Parade/: 0_Parade_Parade_0_102.txt  0_Parade_Parade_0_12.txt  0_Parade_Parade_0_120.txt  0_Parade_Parade_0_125.txt  0_Parade_Parade_0_137.txt  0_Parade_Parade_0_164.txt  0_Parade_Parade_0_194.txt  0_Parade_Parade_0_205.txt  0_Parade_Parade_0_218.txt  0_Parade_Parade_0_239.txt  0_Parade_Parade_0_246.txt  0_Parade_Parade_0_247.txt  0_Parade_Parade_0_266.txt  0_Parade_Parade_0_275.txt  0_Parade_Parade_0_286.txt  0_Parade_Parade_0_288.txt  0_Parade_Parade_0_29.txt  0_Parade_Parade_0_317.txt  0_Parade_Parade_0_353.txt  0_Parade_Parade_0_364.txt  0_Parade_Parade_0_376.txt  0_Parade_Parade_0_377.txt  0_Parade_Parade_0_382.txt  0_Parade_Parade_0_429.txt  0_Parade_Parade_0_43.txt  0_Parade_Parade_0_443.txt  0_Parade_Parade_0_459.txt  0_Parade_Parade_0_461.txt  0_Parade_Parade_0_465.txt  0_Parade_Parade_0_468.txt  0_Parade_Parade_0_470.txt  0_Parade_Parade_0_472.txt  0_Parade_Parade_0_478.txt  0_Parade_Parade_0_490.txt  0_Parade_Parade_0_502.txt  0_Parade_Parade_0_519.txt  0_Parade_Parade_0_53.txt  0_Parade_Parade_0_545.txt  0_Parade_Parade_0_559.txt  0_Parade_Parade_0_611.txt  (+75 more)
detections/WIDER/mtcnn_val/1--Handshaking/: 1_Handshaking_Handshaking_1_107.txt  1_Handshaking_Handshaking_1_134.txt  1_Handshaking_Handshaking_1_158.txt  1_Handshaking_Handshaking_1_209.txt  (+26 more)
src/: main.cpp
(+3079 files in other folders)
